--- a/src/task-03.html
+++ b/src/task-03.html
@@ -13,10 +13,24 @@
         color: #424242;
         line-height: 1.5;
       }
+      ul{
+        display: flex;
+        justify-content: center;
+      }
+
+       li {
+    list-style-type: none;    
+   }
+      .img-galery{
+        width: 300px;
+        height: 250px;
+        padding-left: 40px;
+      }
     </style>
   </head>
   <body>
     <p><a href="index.html">На главную</a></p>
+    <ul  id="gallery"></ul >
     <script src="js/task-03.js" type="module"></script>
   </body>
 </html>
